# talkToPDF

./: .env  main.py  main2.py  mainDani.py  pyproject.toml  render.yaml  requirements.txt
faiss_index/: index.faiss  index.pkl
